# paricia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  comentarios.txt  crear.sh  docker-compose.yml  gen_ref_nav.py  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.in  requirements.txt  requirementsdj2.2.txt  setup.cfg  sonar-project.properties
.github/: ci.yml
.scannerwork/: report-task.txt
Applications/: index.html
adding_elements/: index.html
admin/: index.html
anual/: apps.py  models.py  tests.py
anuarios/: anuario.py  apps.py  formatoI.py  formatoII.py  formatoIII.py  formatoIV.py  formatoV.py  formatoVI.py  forms.py  functions.py  models.py  tests.py  urls.py  views.py
backup/: anuarios_var10anuarios.json  anuarios_var1anuarios.json  cruce_cruce.json  datalogger_datalogger.json  datalogger_marca.json  diario_var10diario.json  diario_var1diario.json  estacion_cuenca.json  estacion_ecosistema.json  estacion_estacion.json  estacion_pais.json  estacion_region.json  estacion_sitio.json  estacion_sitiocuenca.json  estacion_socio.json  estacion_tipo.json  formato_asociacion.json  formato_clasificacion.json  formato_delimitador.json  formato_extension.json  formato_fecha.json  formato_formato.json  formato_hora.json  frecuencia_frecuencia.json  frecuencia_tipofrecuencia.json  importacion_importacion.json  importacion_importaciontemp.json  medicion_curvadescarga.json  medicion_nivelfuncion.json  mensual_var10mensual.json  mensual_var1mensual.json  sensor_marca.json  sensor_sensor.json  sensor_tipo.json  telemetria_alarmatipoestado.json  validacion_comentariovalidacion.json  validacion_validacion.json  variable_unidad.json  variable_variable.json
bitacora/: apps.py  forms.py  models.py  urls.py  views.py
calidad/: apps.py  forms.py  functions.py  models.py  urls.py  views.py
carga_base/: estacion_provincia.py  estacion_tipo.py  sensor_tipo.py
contributing/: index.html
cruce/: apps.py  forms.py  models.py  urls.py  views.py
daily/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
datalogger/: apps.py  forms.py  functions.py  models.py  urls.py  views.py
diario/: apps.py  models.py
djangomain/: asgi.py  middleware.py  renderers.py  settings.py  urls.py  views.py  wsgi.py
docs/: adding_elements.md  admin.md  code_structure.md  gen_ref_nav.py  importing_data.md  index.rst  installation.md  introduction.md  permissions.md  quality_assurance.md  reports.md  synthetic_data.md  validation.md
en/: 404.html  index.html  objects.inv
es/: 404.html  index.html  objects.inv
estacion/: admin.py  apps.py  forms.py  functions.py  models.py  serializers.py  urls.py  views.py
estames/: apps.py  models.py
formato/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
formatting/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  tables.py  urls.py  views.py
frecuencia/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
home/: apps.py  auth_backend.py  constants.py  context_processor.py  forms.py  functions.py  menu.json  models.py  signals.py  urls.py  views.py
horario/: apps.py  forms.py  functions.py  models.py  urls.py  views.py
hourly/: filters.py  models.py  views.py
importacion/: apps.py  forms.py  functions.py  lectura.py  models.py  urls.py  views.py
importing/: admin.py  apps.py  filters.py  forms.py  functions.py  models.py  serializers.py  tables.py  tasks.py  urls.py  utils.py  views.py
importing_data/: index.html
indices/: apps.py  forms.py  functions.py  models.py  urls.py  views.py
instalacion/: apps.py  forms.py  models.py  urls.py  views.py
installation/: index.html
introduction/: index.html
management/: admin.py  filters.py  forms.py  initial_data.py  models.py  permissions.py  serializers.py  tools.py  (+2 more)
(+1723 files in other folders)
